feat: implement  get version at and getHistory endpoint
