# src/main/java/hu/webuni/spring/jupiterwebuni/model/course/CourseMapper.java
@@ -1,11 +1,16 @@
 package hu.webuni.spring.jupiterwebuni.model.course;
 
 import hu.webuni.jupiterwebuni.api.model.CourseDto;
+import hu.webuni.jupiterwebuni.api.model.HistoryDataCourseDto;
+import hu.webuni.spring.jupiterwebuni.model.historydata.HistoryData;
 import org.mapstruct.IterableMapping;
 import org.mapstruct.Mapper;
 import org.mapstruct.Mapping;
 import org.mapstruct.Named;
 
+import java.time.OffsetDateTime;
+import java.time.ZoneId;
+import java.util.Date;
 import java.util.List;
 
 @Mapper(componentModel = "spring")
@@ -22,4 +27,10 @@ public interface CourseMapper {
 
     @IterableMapping(qualifiedByName = "summary")
     List<CourseDto> courseSummariesToDtos(Iterable<Course> courses);
+
+    List<HistoryDataCourseDto> coursesHistoryToHistoryDataCourseDtos(List<HistoryData<Course>> history);
+
+    default OffsetDateTime dateToOffsetDateTime(Date date) {
+        return OffsetDateTime.ofInstant(date.toInstant(), ZoneId.of("Z"));
+    }
 }
